--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       f.src=k;var g=o.getElementsByTagName(c)[0];g.parentNode.insertBefore(f,g)}}(
       window,document,'script','https://www.exploretock.com/tock.js');
   
-      tock('init', 'bbs-diner-toronto');
+      tock('init', '-localhost');
     </script>
   </head>
   <body>
