--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>BB's Diner</title>
 
-    <script>
+    <script defer=false>
       !function(t,o,c,k){if(!t.tock){var e=t.tock=function(){e.callMethod?
       e.callMethod.apply(e,arguments):e.queue.push(arguments)};t._tock||(t._tock=e),
       e.push=e,e.loaded=!0,e.version='1.0',e.queue=[];var f=o.createElement(c);f.async=!0,
       f.src=k;var g=o.getElementsByTagName(c)[0];g.parentNode.insertBefore(f,g)}}(
       window,document,'script','https://www.exploretock.com/tock.js');
   
-      tock('init', '-localhost');
+      tock('init', 'bbs-diner-toronto');
     </script>
   </head>
   <body>
